--- a/css/site.css
+++ b/css/site.css
@@ -15,10 +15,12 @@ main h1 {
 	color: #FFF;
 	padding: 25px;
 	border-bottom: 10px solid black;
+	font-size: 60px;
 }
 
 p {
 	text-align: justify;
+	margin: 20px 0;
 }
 
 blockquote {
@@ -26,6 +28,7 @@ blockquote {
 	border: 10px solid #C2CCCA;
 	width: 250px;
 	box-sizing: border-box;
+	margin: 20px 40px;
 }
 
 aside {
@@ -51,6 +54,11 @@ aside a {
 	font-family: "Open Sans Condensed", sans-serif;
 }
 
+aside h1 {
+	font-size: 30px;
+	 margin-bottom: 25px;
+}
+
 blockquote, aside, footer {
     padding: 20px;
 }
@@ -58,8 +66,21 @@ blockquote, aside, footer {
 main div {
 	width: 720px;
 	margin: auto;
+	padding: 30px 0;
 }
 
 aside {
 	text-align: center;
+}
+
+strong {
+    font-weight: bold;
+}
+
+em {
+    font-style: italic;
+}
+
+h2 {
+    font-size: 30px;
 }
